tests/parsing/smtlib/mcil/errors/277_check-system_assumption_bad_id.mcil
(check-system s1 :assumption (_))